Updated aside section and fixed margins throughout homepage on tablet devices

--- a/css/main.css
+++ b/css/main.css
@@ -544,7 +544,7 @@ address {
 
       .content-wrapper {
         max-width:640px;
-        margin:110px 0;
+        margin:80px 0;
       }
 
       h2 {
@@ -597,25 +597,38 @@ address {
       }
       /* Aside */
       aside .content-wrapper {
-        margin:50px 0;
+        margin:0;
         display:flex;
         justify-content: space-between;
-        flex-flow: row wrap;
+        flex-flow:nowrap;
       }
 
       aside .content-wrapper .form-description, 
       aside .content-wrapper .form{
-        width: 40%;
-        margin: 10px;
+        width: 70%;
+        margin: 20px 20px 50px 50px;
+      }
+      aside {
+        background-color: #527158;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: nowrap;
       }
 
+      aside .form {
+        margin:0px 50px 0px 20px;
+        width:70%;
+      }
+
+  
       /* Features */
 
       .features h2 {
         margin-bottom:20px;
       }
 
-      .features article {
+      .features-items article {
         display:flex;
         justify-content:center;
         align-items:center;
@@ -650,6 +663,10 @@ address {
       .reviews h3 {
         width:75%;
         margin:0;
+      }
+
+      figure {
+        margin:10px;
       }
 
       figure .reviews {
